// Copyright 2017 The Forseti Security Authors. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package server;

service Server {
  rpc Ping(PingRequest) returns (PingReply) {}

  rpc GetLogLevel(GetLogLevelRequest) returns (GetLogLevelReply) {}

  rpc SetLogLevel(SetLogLevelRequest) returns (SetLogLevelReply) {}

  rpc GetServerConfiguration(GetServerConfigurationRequest)
    returns (GetServerConfigurationReply) {}

  rpc ReloadServerConfiguration(ReloadServerConfigurationRequest)
    returns (ReloadServerConfigurationReply) {}

  rpc Run(ServerRunRequest)
    returns (ServerRunReply) {}
}

message SetLogLevelRequest {
  string log_level = 1;
}

message SetLogLevelReply {
  bool is_success = 1;
  string error_message = 2;
}

message GetLogLevelReply {
  string log_level = 1;
}

message GetLogLevelRequest {}


message GetServerConfigurationRequest {}

message GetServerConfigurationReply {
  string configuration = 1;
}

message ReloadServerConfigurationRequest {
  string config_file_path = 1;
}

message ReloadServerConfigurationReply {
  bool is_success = 1;
  string error_message = 2;
}

message PingRequest {
  string data = 1;
}

message PingReply {
  string data = 1;
}

message ServerRunRequest {}

message ServerRunReply {
  string message = 1;
}
